--- a/base-dev.yml
+++ b/base-dev.yml
@@ -5,18 +5,21 @@ spring:
     name: tensquare-base
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://39.108.53.77:3306/tensquare_base?characterEncoding=utf-8
+    url: jdbc:mysql://192.168.17.18:3306/tensquare_base?characterEncoding=utf-8
     username: root
-    password: 123456
+    password: cathome
   jpa:
     database: mysql
     show-sql: true
   rabbitmq:
-    host: 39.108.53.77
+    host: 192.168.17.18
+    port: 5672
+    username: admin
+    password: cathome
 eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:6868/eureka
   instance:
     prefer-ip-address: true
-ip: 127.0.0.13333
+ip: 192.168.17.18.8080
